[gd_scene load_steps=12 format=3 uid="uid://dolngcivhpq68"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_n1rjj"]
[ext_resource type="PackedScene" uid="uid://cybfrs2n2os88" path="res://scenes/ship.tscn" id="2_svg3i"]
[ext_resource type="PackedScene" uid="uid://dl211l7gd0c6e" path="res://scenes/bug_button.tscn" id="3_0kw1x"]
[ext_resource type="Shader" path="res://assets/game.gdshader" id="3_ae1a1"]
[ext_resource type="Resource" uid="uid://bjh84wjjk4a08" path="res://resources/Collider.tres" id="3_nobio"]
[ext_resource type="Texture2D" uid="uid://df7deiklt2v5j" path="res://assets/HumanShip/BombCounter.png" id="3_tu54s"]
[ext_resource type="Resource" uid="uid://btrq546gs6qdq" path="res://resources/FastCollider.tres" id="4_ojr7b"]
[ext_resource type="Resource" uid="uid://oq6sughmeu67" path="res://resources/StraightShooter.tres" id="5_11dgb"]
[ext_resource type="Resource" uid="uid://cu230se8aq3i4" path="res://resources/WaveLeft.tres" id="6_11lp4"]
[ext_resource type="Resource" uid="uid://cg1tyqkstuht2" path="res://resources/WaveRight.tres" id="7_1lfop"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mgm1a"]
shader = ExtResource("3_ae1a1")
shader_parameter/bg_color = null

[node name="Game" type="Node2D"]
script = ExtResource("1_n1rjj")

[node name="Background" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mgm1a")
offset_right = 360.0
offset_bottom = 480.0

[node name="Ship" parent="." instance=ExtResource("2_svg3i")]
position = Vector2(179, 446)

[node name="ShipSpawnPosition" type="Marker2D" parent="."]
position = Vector2(180, 440)

[node name="BulletContainer" type="Node2D" parent="."]

[node name="UnitContainer" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
custom_minimum_size = Vector2(280, 480)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 320.0
offset_right = 600.0
offset_bottom = 480.0
grow_horizontal = 0
size_flags_horizontal = 0

[node name="Rows" type="VBoxContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ColorRect" type="ColorRect" parent="Control/PanelContainer/Rows"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
color = Color(0.305882, 0.568627, 0.364706, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/Rows/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resource" type="Label" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer"]
layout_mode = 2
text = "  Resources: 999"
vertical_alignment = 2

[node name="Hive" type="Label" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer"]
layout_mode = 2
text = "  Hive:"
vertical_alignment = 2

[node name="BugMarket" type="VBoxContainer" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BugRow1" type="HBoxContainer" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BugButton" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket/BugRow1" instance=ExtResource("3_0kw1x")]
layout_mode = 2
stats = ExtResource("3_nobio")

[node name="BugButton2" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket/BugRow1" instance=ExtResource("3_0kw1x")]
layout_mode = 2
stats = ExtResource("4_ojr7b")

[node name="BugButton3" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket/BugRow1" instance=ExtResource("3_0kw1x")]
layout_mode = 2
stats = ExtResource("5_11dgb")

[node name="BugRow2" type="HBoxContainer" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BugButton" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket/BugRow2" instance=ExtResource("3_0kw1x")]
layout_mode = 2
stats = ExtResource("6_11lp4")

[node name="BugButton2" parent="Control/PanelContainer/Rows/ColorRect/VBoxContainer/BugMarket/BugRow2" instance=ExtResource("3_0kw1x")]
layout_mode = 2
stats = ExtResource("7_1lfop")

[node name="ColorRect2" type="ColorRect" parent="Control/PanelContainer/Rows"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="ColorRect3" type="ColorRect" parent="Control/PanelContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.258824, 0.466667, 0.827451, 1)

[node name="BombRows" type="VBoxContainer" parent="Control/PanelContainer/Rows/ColorRect3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/PanelContainer/Rows/ColorRect3/BombRows"]
layout_mode = 2
size_flags_vertical = 0
text = "  Bombs:"
vertical_alignment = 2

[node name="BombColumns" type="HBoxContainer" parent="Control/PanelContainer/Rows/ColorRect3/BombRows"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="Control/PanelContainer/Rows/ColorRect3/BombRows/BombColumns"]
layout_mode = 2
texture = ExtResource("3_tu54s")

[node name="TextureRect2" type="TextureRect" parent="Control/PanelContainer/Rows/ColorRect3/BombRows/BombColumns"]
layout_mode = 2
texture = ExtResource("3_tu54s")

[node name="TextureRect3" type="TextureRect" parent="Control/PanelContainer/Rows/ColorRect3/BombRows/BombColumns"]
layout_mode = 2
texture = ExtResource("3_tu54s")
